Do not use a shortcut for the KMessageWidget's "Close" action

This fixes the problem that the standard "Close" shortcut Control+W
might conflict with, e.g., the "Close Tab" shortcut in Dolphin.

BUG: 317306
FIXED-IN: 4.13.0
REVIEW: 114686